@@ -52,7 +52,8 @@ public:
 	void setCurrentTrack(int trackId);
 	void setCurrentLayer(int layerId);
 
-	void updateControlsEnabled(bool access, bool compatibilityMode);
+	void
+	updateControlsEnabled(bool access, bool locked, bool compatibilityMode);
 
 	canvas::CanvasModel *canvas() const;
 
